Closed Bug 95465 Opened 25 years ago Closed 24 years ago

Trunk, M096 & N621 crash [@ nsXBLPrototypeHandler::ExecuteHandler ]

Categories

(Core :: Layout, defect)

x86
All
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: greer, Assigned: bryner)

References

()

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(3 files)

N610 talkback reports show almost 800 crashes at nsXBLPrototypeHandler::ExecuteHandler on these platforms (cf bug 61519): 1 Linux 2.4.2 1 Linux 2.4.2-2 1 Linux 2.4.3-12 29 Windows 95 4.0 build 67109814 96 Windows 95 4.0 build 67109975 72 Windows 95 4.0 build 67306684 163 Windows 98 4.10 build 67766222 259 Windows 98 4.10 build 67766446 124 Windows 98 4.90 build 73010104 (WinME) 10 Windows NT 4.0 build 1381 22 Windows NT 5.0 build 2195 (Win2K Pro) 1 Windows NT 5.1 build 2505 Stack Trace: nsXBLPrototypeHandler::ExecuteHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp line 386] nsXBLPrototypeHandler::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp line 480] nsXBLPrototypeBinding::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeBinding.cpp line 560] nsXBLBinding::ExecuteAttachedHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLBinding.cpp line 1365] nsBindingManager::ProcessAttachedQueue [d:\builds\seamonkey\mozilla\content\xbl\src\nsBindingManager.cpp line 953] nsCSSFrameConstructor::ContentInserted [d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp line 8463] StyleSetImpl::ContentInserted [d:\builds\seamonkey\mozilla\content\base\src\nsStyleSet.cpp line 1108] PresShell::InitialReflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp line 2554] HTMLContentSink::StartLayout [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp line 3826] HTMLContentSink::OpenBody [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp line 3111] CNavDTD::OpenBody [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 3156] CNavDTD::OpenContainer [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 3407] CNavDTD::HandleDefaultStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 1339] CNavDTD::HandleStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 1744] CNavDTD::HandleToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 924] CNavDTD::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 549] nsParser::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2222] nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2086] nsParser::OnStopRequest [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2720] nsDocumentOpenInfo::OnStopRequest [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp line 248] nsStreamListenerTee::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamListenerTee.cpp line 25] nsHttpChannel::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp line 2115] nsOnStopRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp line 161] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 591] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 524] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 1072] KERNEL32.DLL + 0x22894 (0xbff92894) 0x00688b60
Keywords: crash, topcrash
Reassigning to hyatt.
Assignee: karnaze → hyatt
Keywords: qawanted
greer/jpatel, have there been [m]any occurrences of this on the trunk?
Not in today's (9/3) talkback trunk topcrash report.
blake: there aren't too many recent incidents in the Talkback db, but after A LOT of crashes with MozillaTrunk build 2001080112 (M093 release on Win32), there are only 7 crashes with newer builds. The most recent being: Incident ID 34724363 Stack Signature nsXBLPrototypeHandler::ExecuteHandler 1863af51 Bug ID Trigger Time 2001-08-30 08:08:22 Email Address adiquet@aol.com User Comments opend up a local page on my HD Build ID 2001082805 Product ID MozillaTrunk Platform ID Win32 Trigger Reason Access violation Stack Trace nsXBLPrototypeHandler::ExecuteHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp, line 387] nsXBLPrototypeHandler::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp, line 481] nsXBLPrototypeBinding::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeBinding.cpp, line 560] nsXBLBinding::ExecuteAttachedHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLBinding.cpp, line 1368] nsBindingManager::ProcessAttachedQueue [d:\builds\seamonkey\mozilla\content\xbl\src\nsBindingManager.cpp, line 973] nsCSSFrameConstructor::ContentInserted [d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp, line 8659] StyleSetImpl::ContentInserted [d:\builds\seamonkey\mozilla\content\base\src\nsStyleSet.cpp, line 1181] PresShell::InitialReflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 2626] HTMLContentSink::StartLayout [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp, line 3861] HTMLContentSink::OpenBody [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp, line 3146] CNavDTD::OpenBody [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 3111] CNavDTD::OpenContainer [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 3365] CNavDTD::HandleDefaultStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1293] CNavDTD::HandleStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1699] CNavDTD::HandleToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 884] CNavDTD::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 515] nsParser::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2222] nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2086] nsParser::OnStopRequest [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2717] nsDocumentOpenInfo::OnStopRequest [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 254] nsStreamListenerTee::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamListenerTee.cpp, line 25] nsHttpChannel::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp, line 2197] nsOnStopRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp, line 162] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 591] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 524] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1072] KERNEL32.DLL + 0x248f7 (0xbff848f7) 0x00688b5a 0x00058f64 Although we have a lot of user comments, no one has been able to come up with steps to reproduce.
Summary: N610 crash [@ nsXBLPrototypeHandler::ExecuteHandler ] → N610 & M093 crash [@ nsXBLPrototypeHandler::ExecuteHandler ]
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
*** Bug 100190 has been marked as a duplicate of this bug. ***
*** Bug 103801 has been marked as a duplicate of this bug. ***
Adding N620 to summary since I found one incident in a recent N620 branch build: nsXBLPrototypeHandler::ExecuteHandler 1 95465 ASSI hyatt@netscape.com mozilla1.0 2001-10-13 59782 VERI DUPL hyatt@netscape.com --- 2000-11-30 BBID range: 36900517 - 36900517 Min/Max Seconds since last crash: 8256 - 8256 Min/Max Runtime: 49620 - 49620 Crash data range: 2001-10-19 to 2001-10-19 Build ID range: 2001101718 to 2001101718 Stack Trace: nsXBLPrototypeHandler::ExecuteHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp line 387] nsXBLPrototypeHandler::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp line 521] nsXBLPrototypeBinding::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeBinding.cpp line 565] nsXBLBinding::ExecuteAttachedHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLBinding.cpp line 1134] nsBindingManager::ProcessAttachedQueue [d:\builds\seamonkey\mozilla\content\xbl\src\nsBindingManager.cpp line 1285] nsCSSFrameConstructor::ContentInserted [d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp line 8669] StyleSetImpl::ContentInserted [d:\builds\seamonkey\mozilla\content\base\src\nsStyleSet.cpp line 1181] PresShell::InitialReflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp line 2628] HTMLContentSink::StartLayout [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp line 3861] HTMLContentSink::OpenBody [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp line 3146] CNavDTD::OpenBody [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 3119] CNavDTD::OpenContainer [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 3373] CNavDTD::HandleDefaultStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 1293] CNavDTD::HandleStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 1707] CNavDTD::HandleToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 884] CNavDTD::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp line 515] nsParser::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2220] nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2084] nsParser::OnStopRequest [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp line 2715] nsDocumentOpenInfo::OnStopRequest [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp line 256] nsStreamListenerTee::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamListenerTee.cpp line 25] nsHttpChannel::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp line 2191] nsOnStopRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp line 162] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 591] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 524] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 1072] nsXBLPrototypeHandler::ExecuteHandler 85ed894c http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/content/xbl/src/nsXBLPrototypeHandler.cpp line 387 Build: 2001101718 CrashDate: 2001-10-19 UptimeMinutes: 137 Total: 827 OS: Windows 95 4.0 build 67306684 Detailed : http://climate/reports/incidenttemplate.cfm?bbid=36900517 StackTrace: http://climate/reports/singleincidentinfo.cfm?dynamicBBID=36900517 Still no idea how to reproduce, but if this is a topcrasher with Netscape 6.20, we'll be getting plenty more user comments and urls.
Summary: N610 & M093 crash [@ nsXBLPrototypeHandler::ExecuteHandler ] → M093 & N620 crash [@ nsXBLPrototypeHandler::ExecuteHandler ]
Target Milestone: mozilla1.0 → mozilla1.0.1
*** Bug 109767 has been marked as a duplicate of this bug. ***
I get a 100% crash if i load the URL from bug 109767
Most of the time it crashes at the very first run ... sometimes you "need to reload to get the crash". using build 2001111203 on win2k
Mozilla crashes at every page at http://www.world-direct.com/gia/test that is XML/XSL based. Could this be somehow related to XSLT ?
Tested on two separate machines one with Win2K and the other Win98, using Netscape 6.2. Win98 had no problems navigating the site. Win2K though would navigate the site, but when you went to the specific link: http://www.world-direct.com/gia/test/feedback.asp It would crash as soon as it began to connect to the site. Sent in Talkback report. Duplicated this 3 times in a row.
Target Milestone: mozilla1.0.1 → ---
Target Milestone: --- → mozilla1.0.1
*** Bug 109767 has been marked as a duplicate of this bug. ***
This signature has 31 incidents shwoing up in N621, updating summary. Markus and Kevin, can you repro with N621?
Summary: M093 & N620 crash [@ nsXBLPrototypeHandler::ExecuteHandler ] → M093 & N621 crash [@ nsXBLPrototypeHandler::ExecuteHandler ]
Updating the summary fro real this time. Still showing up in M096 and the Trunk. M096 (nsXBLPrototypeHandler::ExecuteHandler): 12 (214202) - 2001112012: Windows 98 4.10 build 67766446 accessing email for the very first time in Mozilla (278703) - 2001112012: Windows NT 5.0 build 2195 opening in new Tab url file:/// on mapped network disk URL: http://www.themes.org/skins/mozilla/ N621 (nsXBLPrototypeHandler::ExecuteHandler): 31 (231640) - 2001112815: Windows 98 4.10 build 67766446 trying to update a profile for CVS pharmacy (236461) - 2001112815: Windows 98 4.90 build 73010104 shutdown and restart (221425) - 2001112815: Windows 95 4.0 build 67306684 java is corrupted or missused...how do i fix this... (242298) - 2001112815: Windows 98 4.10 build 67766446 checking e-mail (242217) - 2001112815: Windows 98 4.10 build 67766446 wait - reboost (267912) - 2001112815: Windows 98 4.90 build 73010104 Pulled up my Windows Media Player and the Communicator disappeared. (253736) - 2001112815: Windows 98 4.10 build 67766222 trying to register netscape.com (249265) - 2001112815: Windows 98 4.10 build 67766222 just logged onto netscpae. (249095) - 2001112815: Windows 98 4.10 build 67766222 just logged onto netscpae. (200271) - 2001112815: Windows 98 4.10 build 67766446 SET UP NETSCAPE 6.21 URL: Trunk (nsXBLPrototypeHandler::ExecuteHandler): 2
Summary: M093 & N621 crash [@ nsXBLPrototypeHandler::ExecuteHandler ] → Trunk, M096 & N621 crash [@ nsXBLPrototypeHandler::ExecuteHandler ]
Above URLs wfm using today's build on Win2K. Any reason not to resolve as such?
This signature is still showing up in the latest Mozilla release (M098) and in the Trunk. Although *all* of the Trunk comments are from build 2002020521 and most point specifically to startup crashes.
Hyatt says that this trace just indicates that control has been passed to some Javascript code, which is presumably crashing. Since the UI is written in JS, that doesn't narrow this down much, and it is probably not even a single crash. We'll need reproducible cases in order to attack any of the root causes. If this hasn't been seen on the trunk in over two weeks, I'm not sure how we'll get them. ->bryner, in hopes he can glean some useful info from the comment with the shell output.
Assignee: hyatt → bryner
Status: ASSIGNED → NEW
nominating topcrash bugs for nsbeta1.
Keywords: nsbeta1
Here's the most recent crash on the Trunk (that isn't a startup crash) with helpful comments: Incident ID 3378644 Stack Signature nsXBLPrototypeHandler::ExecuteHandler 0a20cfe2 Trigger Time 2002-02-26 05:01:15 Email Address URL visited Build ID 2002020816 Product ID MozillaBranch Platform Operating System Win32 Module Trigger Reason Access violation User Comments openening lots of windows using window.open, then referring back to window.opener. Done in framesets so references include top. Stack Trace nsXBLPrototypeHandler::ExecuteHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp, line 388] nsXBLPrototypeHandler::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeHandler.cpp, line 530] nsXBLPrototypeBinding::BindingAttached [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLPrototypeBinding.cpp, line 440] nsXBLBinding::ExecuteAttachedHandler [d:\builds\seamonkey\mozilla\content\xbl\src\nsXBLBinding.cpp, line 1044] nsBindingManager::ProcessAttachedQueue [d:\builds\seamonkey\mozilla\content\xbl\src\nsBindingManager.cpp, line 912] nsCSSFrameConstructor::ContentInserted [d:\builds\seamonkey\mozilla\layout\html\style\src\nsCSSFrameConstructor.cpp, line 8524] StyleSetImpl::ContentInserted [d:\builds\seamonkey\mozilla\content\base\src\nsStyleSet.cpp, line 1446] PresShell::InitialReflow [d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 2634] HTMLContentSink::StartLayout [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp, line 3887] HTMLContentSink::OpenBody [d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLContentSink.cpp, line 3162] CNavDTD::OpenBody [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 3156] CNavDTD::OpenContainer [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 3413] CNavDTD::HandleDefaultStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1320] CNavDTD::HandleStartToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 1729] CNavDTD::HandleToken [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 909] CNavDTD::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\CNavDTD.cpp, line 534] nsParser::BuildModel [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1985] nsParser::ResumeParse [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 1849] nsParser::OnStopRequest [d:\builds\seamonkey\mozilla\htmlparser\src\nsParser.cpp, line 2507] nsDocumentOpenInfo::OnStopRequest [d:\builds\seamonkey\mozilla\uriloader\base\nsURILoader.cpp, line 254] nsHttpChannel::OnStopRequest [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp, line 2446] nsOnStopRequestEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp, line 213] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 591] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 524] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1072] nsAppShellService::Run [d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 303] main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1301] main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1628] WinMain [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1646] WinMainCRTStartup() KERNEL32.DLL + 0xd326 (0x77e8d326) Could QA please try to reproduce the steps taken by this user and see if they can crash with a recent Trunk build?
nsbeta1+ per ADT triage team. cc jrgm. John, could you please look into this?
Keywords: nsbeta1nsbeta1+
Target Milestone: mozilla1.0.1 → mozilla1.0
I tried reproducing this bug, but could not. By the comments, this happens all over the app. We run through this code path dozens of times when we open a window or dialog, and several times on each key event. The crash has consistently remained at the same code fragment, dereferencing a null pointer, since last August. I think we should just put a little bulletproofing in at that point and see how this goes in mozilla0.9.9. (Note: this is the same kind of bulletproofing that decorates the code immediately preceding this location, which closed off an earlier incarnation of 'crash in nsXBLPrototypeHandler::ExecuteHandler').
If this null check seems OK, bryner can you r= and checkin? hyatt, sr=?
Keywords: approval, patch
Comment on attachment 72179 [details] [diff] [review] more spackle required r=bryner
Attachment #72179 - Flags: review+
Comment on attachment 72179 [details] [diff] [review] more spackle required verbal sr=hyatt
Attachment #72179 - Flags: superreview+
Comment on attachment 72179 [details] [diff] [review] more spackle required a=asa (on behalf of drivers) for checkin to the 0.9.9 branch and the 1.0 trunk
Attachment #72179 - Flags: approval+
This is checked in, should the bug be closed out? (I'd guess probably not)
Also checked into 099. Closing per jrgm's suggestion.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified that the fix landed on 99branch and on the trunk. The proof will be whether this crash drops off the talkback topcrash rolls. Reopen if it doesn't go away (not sure how that could happen, though).
Status: RESOLVED → VERIFIED
A quick check of M099 and Trunk data doesn't show this crash. Looks like a good fix.
in my console I'm seeing: "failed to get the nsIScriptGlobalObject. bug 95465?" should this be reopened? it happens when pressing ok after adding domain to the xpi whitelist
file a new bug
Depends on: 388264
Crash Signature: [@ nsXBLPrototypeHandler::ExecuteHandler ]
Keywords: qawanted
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: