Bulletproofing fix for bug 95465.  Patch from John Morrison <jrgm@netscape.com>, r=bryner, sr=hyatt, a=asa.